# foodgram-st

./: README.md
.github/workflows/: main.yml
backend/: .dockerignore  .env.example  Dockerfile  constants.py  manage.py  pyproject.toml  requirements.txt
backend/api/: fields.py  filters.py  pagination.py  permissions.py  urls.py
backend/api/serializers/: recipes.py  subscriptions.py  users.py
backend/api/views/: recipes.py  users.py
backend/data/: create_users.py  load_ingredients.py  load_test_data.py  recipes.json  set_up_data.sh  set_up_ingredients.sh
backend/foodgram_backend/: settings.py  urls.py
backend/recipes/: admin.py  filters.py  models.py  permissions.py  serializers.py  utils.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ingredient_options_alter_recipe_options_and_more.py
backend/users/: admin.py  models.py  permissions.py  serializers.py  subscription_serializer.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_subscription_options_alter_subscription_author_and_more.py
infra/: .env.example  docker-compose-dev.yml  docker-compose.yml  nginx-dev.conf  nginx.conf
infra-dev/: .env.example  docker-compose-dev.yml
