[project]
name = "foodgram-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "django==5.2.1",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "djoser==2.3.1",
    "gunicorn==23.0.0",
    "pillow==11.2.1",
    "psycopg2==2.9.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[tool.ruff.format]
quote-style = "single"